tests/ui/mismatched_types/recovered-block.stderr
error: missing `enum` for enum definition
  --> $DIR/recovered-block.rs:11:5
   |
LL |     pub Foo { text }
   |     ^^^^^^^
   |
help: add `enum` here to parse `Foo` as an enum
   |
LL |     pub enum Foo { text }
   |         ++++

error: aborting due to 1 previous error

